[metadata]
name = epiksploit
version = file: epiksploit/VERSION.txt
author = MirageSh
author_email = contact@epiksploit.com
url = https://github.com/MirageSh/epiksploit
description = EpikSploit Framework Pentesting
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    epiksploit
    pentesting
    framework
license = AGPLv3
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = find:
include_package_data = False
install_requires =
    sploitkit>=0.5.0
setup_requires = setuptools
python_requires = >=3.6,<4
[options.package_data]
* = *.txt
[options.entry_points]
console_scripts =
    epiksploit = epiksploit.__main__:main